add specifications to work with vscode on readme